--- a/frontend/src/app/employee-list/employee-list.component.html
+++ b/frontend/src/app/employee-list/employee-list.component.html
@@ -1,14 +1,14 @@
-<h2> Employee List</h2>
+<h2>Employee List</h2>
 <table class="table table-striped">
     <thead>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email Id</th>
-        </tr>
+    <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email Id</th>
+    </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let employee of employees">
+        <tr *ngFor='let employee of employees'>
             <td>{{employee.firstName}}</td>
             <td>{{employee.lastName}}</td>
             <td>{{employee.emailId}}</td>
